fix video playing on mobile size

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -7,6 +7,13 @@
   position: relative;
   width: 100%;
   z-index: 2;
+
+  @include tablet {
+    background: url('../../poster.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 video {
@@ -17,10 +24,6 @@ video {
 
 @media screen and (max-width: $tablet) {
   video {
-    background: url('../../poster.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     display: none;
   }
 }
